Crash when images moved and scanning for new

If images are moved e.g. from command line while KPhotoAlbum is running
a crash occurs when scanning for new images. This patch seems to fix the
issue as described in bug report's case nro 2.

BUG: 254638